--- a/style/style.css
+++ b/style/style.css
@@ -308,7 +308,8 @@ body {
 }
 
 .banners__title {
-  margin: 0;
+  width: 600px;
+  margin: 0 auto;
   margin-bottom: 55px;
   font-size: 32px;
   font-weight: 900;
@@ -351,4 +352,106 @@ body {
   font-size: 16px;
   font-weight: 400;
   line-height: 22px;
+}
+
+/* goods */
+.goods {
+  padding-top: 81px;
+}
+
+.goods__title {
+  margin: 0 auto;
+  margin-bottom: 107px;
+  width: 600px;
+  text-align: center;
+  font-size: 32px;
+  font-weight: 900;
+  line-height: 46px;
+}
+
+.goods__list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 30px;
+}
+
+.goods__item {
+  background: #fcfcfc;
+  border-radius: 8px;
+  padding: 0 40px 24px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.goods__image {
+  display: block;
+  margin: auto;
+  margin-top: -51px;
+  margin-bottom: 16px;
+  filter: drop-shadow(0 4px 12px rgba(45, 52, 64, 0.1));
+  grid-row: 1 / 2;
+  grid-column: 1 / span 2;
+}
+
+.goods__item-title {
+  margin: 0;
+  margin-bottom: 8px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 24px;
+  grid-row: 2 / 3;
+  grid-column: 1 / span 2;
+}
+
+.goods__item-description {
+  margin: 0;
+  margin-bottom: 16px;
+  color: #565c66;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 22px;
+  grid-row: 3 / 4;
+  grid-column: 1 / span 2;
+}
+
+.goods__price-container {
+  grid-row: 4 / 5;
+  grid-column: 1 / 2;
+  margin: 0;
+  align-self: center;
+}
+
+.goods__price {
+  margin-right: 2px;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 24px;
+}
+
+.goods__price-type {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 24px;
+}
+
+.goods__cart-button {
+  width: 32px;
+  height: 32px;
+  margin: 0;
+  padding: 8px;
+  border: none;
+  border-radius: 50%;
+  background-color: #ff2f64;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  grid-row: 4 / 5;
+  grid-column: 2 / 3;
+  justify-self: end;
+  align-self: start;
 }
