--- a/style/style.css
+++ b/style/style.css
@@ -60,12 +60,20 @@ body {
   font-size: 16px;
   font-weight: 700;
   line-height: 20px;
+  box-shadow: 0 4px 12px 0 rgba(45, 52, 64, 0.1);
 }
 
 .button--primary {
   outline: 4px solid rgba(252, 252, 252, 0.4);
   background-color: #fcfcfc;
-  box-shadow: 0 4px 12px 0 rgba(45, 52, 64, 0.1);
+  color: #2d3440;
+}
+
+.button--extra {
+  border-radius: 26px;
+  outline: 4px solid rgba(255, 47, 100, 0.3);
+  background-color: #ff2f64;
+  color: #fcfcfc;
 }
 
 .header {
@@ -541,21 +549,22 @@ body {
 .newsletter-container {
   display: flex;
   gap: 30px;
+  margin-bottom: 80px;
 }
 
 .news {
-  width: 570px;
+  width: 580px;
   border-radius: 16px;
-  background: #d3d3d3 url("../img/set-up.jpg") no-repeat bottom -75px right -50px;
-  background-size: cover;
+  background: #d3d3d3 url("../img/set-up.jpg") no-repeat bottom -113px right -78px;
+  background-size: 115%;
   color: #2d3440;
-  padding: 32px 235px 67px 32px;
+  padding: 33px 100px 32px 32px;
   box-sizing: border-box;
 }
 
 .news__title {
   margin: 0;
-  margin-bottom: 12px;
+  margin-bottom: 13px;
   color: #565c66;
   font-size: 16px;
   font-weight: 400;
@@ -572,4 +581,43 @@ body {
 
 .newsletter {
   width: 570px;
+  background: #ffffff url("../img/post-background.png") center center;
+  border-radius: 16px;
+  padding: 6px;
+  color: #565c66;
+}
+
+.newsletter__content {
+  background-color: #ffffff;
+  color: #565c66;
+  padding: 26px;
+  border-radius: 16px;
+}
+
+.newsletter__description {
+  margin: 0;
+  margin-bottom: 45px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 22px;
+}
+
+.form__input {
+  border-radius: 4px;
+  border: 1px solid #b9b9b9;
+  background-color: #ffffff;
+  padding: 14px 16px;
+  box-sizing: border-box;
+}
+
+.form__input::placeholder {
+  color: #b9b9b9;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+}
+
+.newsletter__input {
+  width: 332px;
+  margin-right: 14px;
 }
