--- a/style/style.css
+++ b/style/style.css
@@ -190,6 +190,8 @@ body {
 }
 
 .main__wrapper {
+  display: flex;
+  flex-direction: column;
   width: 1170px;
   margin: auto;
 }
@@ -338,6 +340,7 @@ body {
 /* banners */
 .banners {
   padding-top: 72px;
+  margin-bottom: 81px;
 }
 
 .banners__title {
@@ -389,8 +392,7 @@ body {
 
 /* goods */
 .goods {
-  padding-top: 81px;
-  margin-bottom: 80px;
+  margin-bottom: 40px;
 }
 
 .goods__title {
@@ -405,11 +407,12 @@ body {
 
 .goods__list {
   margin: 0;
+  margin-bottom: 16px;
   padding: 0;
   list-style-type: none;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 30px;
+  gap: 91px 30px;
 }
 
 .goods__item {
@@ -492,6 +495,7 @@ body {
 
 /* description */
 .description {
+  margin-top: 40px;
   margin-bottom: 80px;
   padding: 24px;
   border-radius: 16px;
@@ -926,6 +930,10 @@ body {
 }
 
 /* filter */
+.filter {
+  margin-bottom: 97px;
+}
+
 .filter__form {
   display: flex;
   flex-wrap: wrap;
@@ -1074,4 +1082,70 @@ body {
 
 .filter__button {
   align-self: end;
+}
+
+/* pagination */
+.pagination {
+  display: flex;
+  justify-content: end;
+  padding-top: 41px;
+  padding-bottom: 41px;
+}
+
+.pagination__button--show-more {
+  margin-right: 335px;
+  padding: 12px 35px;
+}
+
+.pagination-container {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.pagination__button-arrow {
+  display: flex;
+  align-items: center;
+  width: 16px;
+  height: 16px;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+
+.pagination__button-arrow-icon {
+  fill: #2d3440;
+}
+
+.pagination__button-arrow:disabled .pagination__button-arrow-icon {
+  fill: rgba(45, 52, 64, 0.3);
+}
+
+.pagination__list {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.pagination__button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 2px 8px;
+  border: none;
+  background-color: transparent;
+  width: 24px;
+  height: 24px;
+  border-radius: 50px;
+  color: #2d3440;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+}
+
+.pagination__button--current {
+  background-color: #fcfcfc;
 }
