--- a/style/style.css
+++ b/style/style.css
@@ -198,6 +198,10 @@ body {
   box-shadow: none;
 }
 
+.button--tooltip:hover {
+  cursor: pointer;
+}
+
 .header {
   padding-top: 23px;
   padding-bottom: 23px;
@@ -1055,6 +1059,45 @@ body {
 .delivery__button {
   display: block;
   margin: auto;
+}
+
+/* tooltip */
+.tooltip {
+  position: relative;
+}
+
+.tooltip__message {
+  display: none;
+  position: absolute;
+  top: -11px;
+  left: 24px;
+  width: 150px;
+  border: 1px solid #b9b9b9;
+  border-radius: 1px;
+  background-color: #ffffff;
+  filter: drop-shadow(0 4px 8px rgba(194, 194, 194, 0.2));
+  padding: 10px 8px;
+  color: #565c66;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 16px;
+}
+
+.tooltip__message::before {
+  position: absolute;
+  top: 12px;
+  left: -6px;
+  width: 10px;
+  height: 10px;
+  border-bottom: 1px solid #b9b9b9;
+  border-left: 1px solid #b9b9b9;
+  background-color: #ffffff;
+  transform: rotate(45deg);
+  content: "";
+}
+
+.tooltip__message--opened {
+  display: block;
 }
 
 /* contacts */
