--- a/style/style.css
+++ b/style/style.css
@@ -67,6 +67,8 @@ body {
   outline: 4px solid rgba(252, 252, 252, 0.4);
   background-color: #fcfcfc;
   color: #2d3440;
+  margin-right: 6px;
+  margin-bottom: 10px;
 }
 
 .button--primary:hover {
@@ -98,6 +100,7 @@ body {
 }
 
 .button--extra {
+  margin-bottom: 10px;
   border-radius: 26px;
   outline: 4px solid rgba(255, 47, 100, 0.3);
   background-color: #ff2f64;
@@ -225,6 +228,7 @@ body {
 .navigation-user {
   width: 470px;
   display: flex;
+  flex-wrap: wrap;
   justify-content: end;
 }
 
@@ -238,6 +242,7 @@ body {
   padding: 0;
   list-style-type: none;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .navigation__link {
@@ -336,6 +341,7 @@ body {
 
 .slider__title {
   margin: 0;
+  margin-top: 10px;
   margin-bottom: 24px;
   font-size: 36px;
   font-weight: 900;
@@ -509,6 +515,8 @@ body {
   list-style-type: none;
   display: flex;
   gap: 11px;
+  flex-wrap: wrap;
+  max-width: 350px;
 }
 
 .slider__social-list {
@@ -599,8 +607,8 @@ body {
 }
 
 .banner {
-  width: 570px;
-  padding: 36px 200px 36px 36px;
+  width: 100%;
+  padding: 36px 200px 26px 36px;
   border-radius: 16px;
 }
 
@@ -632,7 +640,7 @@ body {
 
 /* goods */
 .goods {
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
 
 .goods__title {
@@ -852,7 +860,7 @@ body {
 .newsletter-container {
   display: flex;
   gap: 30px;
-  margin-bottom: 80px;
+  margin-bottom: 84px;
 }
 
 .news {
@@ -875,6 +883,8 @@ body {
 }
 
 .news__link {
+  display: block;
+  margin-bottom: 5px;
   color: #2d3440;
   font-size: 24px;
   font-weight: 700;
@@ -883,7 +893,7 @@ body {
 }
 
 .newsletter {
-  width: 570px;
+  width: 100%;
   background: #ffffff url("../img/post-background.png") center center;
   border-radius: 16px;
   padding: 6px;
@@ -894,6 +904,7 @@ body {
   background-color: #ffffff;
   color: #565c66;
   padding: 26px;
+  padding-bottom: 16px;
   border-radius: 16px;
 }
 
@@ -1002,6 +1013,7 @@ body {
 
 .delivery__description {
   margin: 0;
+  margin-bottom: 5px;
   font-size: 16px;
   font-weight: 400;
   line-height: 22px;
@@ -1013,6 +1025,7 @@ body {
   background-color: #fcfcfc;
   color: #565c66;
   padding: 40px;
+  padding-bottom: 34px;
   border-radius: 8px;
   box-shadow: 0 15px 40px 0 rgba(45, 52, 64, 0.12);
 }
@@ -1059,6 +1072,7 @@ body {
 .delivery__button {
   display: block;
   margin: auto;
+  margin-bottom: 10px;
 }
 
 /* tooltip */
@@ -1119,6 +1133,8 @@ body {
   color: #2d3440;
   width: 343px;
   padding: 40px;
+  padding-top: 37px;
+  padding-bottom: 30px;
   box-sizing: border-box;
 }
 
@@ -1243,6 +1259,7 @@ body {
   padding: 0;
   list-style-type: none;
   display: flex;
+  flex-wrap: wrap;
   gap: 28px;
 }
 
@@ -1558,6 +1575,7 @@ body {
 
 .filter__button {
   align-self: end;
+  margin-left: 5px;
 }
 
 /* pagination */
@@ -1604,6 +1622,7 @@ body {
 
 .pagination__list {
   display: flex;
+  flex-wrap: wrap;
   margin: 0;
   padding: 0;
   list-style-type: none;
